fixing some references

--- a/Doctorate_Prog/proposal_3.bib
+++ b/Doctorate_Prog/proposal_3.bib
@@ -529,7 +529,7 @@ url="https://doi.org/10.1007/978-3-319-22102-1_24"
 }
 
 @inproceedings{kohlhase2010towards,
-	title={Towards MKM in the large: Modular representation and scalable software architecture},
+	title={Towards {MKM} in the large: Modular representation and scalable software architecture},
 	author={Kohlhase, Michael and Rabe, Florian and Zholudev, Vyacheslav},
 	booktitle={International Conference on Intelligent Computer Mathematics},
 	pages={370--384},
@@ -539,7 +539,7 @@ url="https://doi.org/10.1007/978-3-319-22102-1_24"
 
 @inproceedings{rabediagram,
 	title={Diagram Combinators in MMT},
-	author={Rabe, Florian and Sharoda, Yasmine}
+	author={Rabe, Florian and Sharoda, Yasmine},
 	booktitle={International Conference on Intelligent Computer Mathematics},
 	year={2019},
 	organization={Springer}
