--- a/Doctorate_Prog/research_summary.tex
+++ b/Doctorate_Prog/research_summary.tex
@@ -107,7 +107,7 @@ rewrite rules, equivalence of terms, and parse trees.
 
 \paragraph{Approach}
 We are interested in syntactically manipulating theory presentations, in their most abstract form. To 
-achieve a high level of abstraction, we use \mmt \cite{MMT_homepage} as a data description 
+achieve a high level of abstraction, we use \mmt \cite{kohlhase2010towards} as a data description 
 language (DDL). 
 \mmt is a foundation independent framework for managing mathematical knowledge. Knowledge is 
 structured as a theory graph. 
