--- a/Doctorate_Prog/presentation/slides.tex
+++ b/Doctorate_Prog/presentation/slides.tex
@@ -136,7 +136,8 @@ Do you find yourself going through \\
 
 \subsection{Agda Example}
 \begin{frame}[fragile]
-\frametitle{Example: Agda\footnote{code from: \url{https://github.com/JacquesCarette/TheoriesAndDataStructures/}}}
+\frametitle{Copy-paste}
+%\frametitle{Example: Agda\footnote{code from: \url{https://github.com/JacquesCarette/TheoriesAndDataStructures/}}}
 Define the category of group
 \begin{lstlisting}
 
