added more about feature model

--- a/Doctorate_Prog/presentation/slides.tex
+++ b/Doctorate_Prog/presentation/slides.tex
@@ -1,95 +1,6 @@
 \documentclass[t,12pt,numbers,fleqn,usenames,xcolor=dvipsnames]{beamer}
-%\documentclass[t,12pt,numbers,fleqn,handout]{beamer}
-% The theme: https://github.com/kailashbuki/beamerthemesaarland`
 
-%\usetheme[
-%background=saarland,
-%logo=uds
-%]{saarland}
-%\graphicspath{{images/}}
-
-
-\usepackage{amsmath}
-\usepackage{mathtools}
-\usepackage{amsfonts}
-\usepackage{paralist}
-\usepackage{latexsym}
-\usepackage{amssymb}
-\usepackage{stmaryrd}
-\usepackage{phonetic}
-\usepackage{wasysym}
-\usepackage{pgf}
-\usepackage{tikz}
-\usepackage{url}
-\usetikzlibrary{arrows}
-\usepackage{array}
-\usepackage{pgfpages} 
-\usepackage{multirow} 
-\usepackage{graphicx}
-\usepackage{color}
-\usepackage{listings,lstautogobble}
-\lstset{
-	basicstyle=\ttfamily,
-	mathescape
-}
-\usepackage{hyperref}
-\usepackage{verbatim}
-\usepackage{fancyvrb}
-\usepackage{tabularx}
-\usepackage{tikz}
-\usepackage{tikz-cd}
-\usetikzlibrary{cd}
-\usepackage{graphicx}
-\usepackage{collectbox}
-\usepackage{tabularx}
-\usepackage{wrapfig}
-\usepackage{lscape}
-\usepackage{textcomp}
-
-\usepackage[show]{ed}
-\usepackage{smartdiagram}
-\usesmartdiagramlibrary{additions}
-\usepackage{adjustbox}
-\setlength{\arrayrulewidth}{1mm}
-\setlength{\tabcolsep}{18pt}
-\renewcommand{\arraystretch}{1.5}
-\hypersetup{colorlinks=false,
-    linkcolor=blue,
-    citecolor=blue,
-    filecolor=blue,
-    urlcolor=blue,
-    unicode=false}
-
-%\usepackage{macros}
-%\usepackage{local}
-%\usepackage{basics}
-
-% To include lagda 
-
-\usepackage{macros/agda}
-\usepackage{catchfilebetweentags}
-%\usepackage{ucs}
-%\usepackage[utf8x]{inputenc}
-%\usepackage{autofe}
-%\usepackage{fancyvrb}
-%\DefineVerbatimEnvironment
-%{code}{Verbatim}
-
-
-\lstset{language=lisp,basicstyle=\ttfamily,breaklines=true,showspaces=false,showstringspaces=false,breakatwhitespace=true,texcl=true,escapeinside={\%*}{*)}}
-\tikzstyle{stuff_fill}=[rectangle,draw,fill=black!20,minimum size=1.4em]
-
-
-\usepackage{fancybox}
-
-\mode<presentation>{}
-
-
-\usetheme{default}
-\setbeamertemplate{navigation symbols}{} 
-\setbeamertemplate{itemize item}[ball]
-\setbeamersize{text margin left = 4mm}
-\setbeamersize{text margin right = 4mm}
+\input{preamble}
 
 %\input{def-beamer}
 
@@ -232,9 +143,16 @@ theory Bar {
 %\end{columns}
 
 
+\begin{comment}[fragile]
+\frametitle{Real Example: Agda Library}
+\ExecuteMetaData[agdacode/Morphism.tex]{groupHom}
+\end{comment}
+
+
+
 \begin{frame}
 \frametitle{Real Example: Agda Library
-\footnote{https://github.com/agda/agda-stdlib/blob/master/src/Algebra/Morphism.agda}}
+\footnote{source: \url{https://github.com/agda/agda-stdlib/blob/master/src/Algebra/Morphism.agda}}}
 \begin{columns}
 	\begin{column}{0.45\textwidth}
 \begin{figure}
@@ -258,27 +176,27 @@ theory Bar {
 \subsection{Real Example: Isabelle Library}
 \begin{frame}[fragile]
 \frametitle{Example: Isabelle \footnote{source: \url{https://isabelle.in.tum.de/dist/library/HOL/HOL-Algebra/index.html}}}
-\begin{columns}
-	\begin{column}{0.45\textwidth}
-		\begin{figure}
-			\includegraphics[scale=0.3]{isabelle_example/submonoid.png}
-		\end{figure}
-		\begin{figure}
-			\includegraphics[scale=0.3]{isabelle_example/subgroup.png}
-		\end{figure}
-	\end{column}
-	\begin{column}{0.45\textwidth}
-		\begin{figure}
-			\includegraphics[scale=0.3]{isabelle_example/prod.png}
-		\end{figure}
-		\begin{figure}
-			\includegraphics[scale=0.3]{isabelle_example/prod_mon.png}
-		\end{figure}
-		\begin{figure}
-			\includegraphics[scale=0.3]{isabelle_example/prod_group.png}
-		\end{figure}
-	\end{column}
-\end{columns}
+\begin{flushleft}
+\begin{onlyenv}<1>
+\begin{figure}
+	\includegraphics[scale=0.4]{isabelle_example/submonoid.png}
+\end{figure}
+\begin{figure}
+	\includegraphics[scale=0.4]{isabelle_example/subgroup.png}
+\end{figure}
+\end{onlyenv}
+\begin{onlyenv}<2>
+	\begin{figure}
+	\includegraphics[scale=0.4]{isabelle_example/prod.png}
+\end{figure}
+\begin{figure}
+	\includegraphics[scale=0.4]{isabelle_example/prod_mon.png}
+\end{figure}
+\begin{figure}
+	\includegraphics[scale=0.4]{isabelle_example/prod_group.png}
+\end{figure}
+\end{onlyenv}
+\end{flushleft}
 \end{frame}
 
 \subsection{Other Structures}
@@ -427,12 +345,25 @@ Manipulating OmDoc terms
 \begin{tikzpicture}
 \draw (0,0) node [stuff_fill] {Result: Feature Model};
 \end{tikzpicture}
-
-\textit{building blocks being concepts and features}
 \end{frame}
 
 \begin{frame}[fragile]{Feature Model}
-show small example 
+Consists of 
+\begin{itemize}
+	\item Feature Diagram: Hierarchies and Dependencies
+	\begin{itemize}
+		\item Mandatory, Alternative or Optional 
+	\end{itemize}
+	\item Feature Definition
+	\item Composition Rules
+	\begin{itemize}
+		\item Valid/Invalid Feature Combinations 
+	\end{itemize}
+	\item Rationale
+	\begin{itemize}
+		\item Reasons for choosing / not choosing a feature
+	\end{itemize} 
+\end{itemize}
 \end{frame}
 
 \section{Evaluation}
